--- a/static/styles/windows.css
+++ b/static/styles/windows.css
@@ -301,8 +301,8 @@
 #borderCoverVertical2{
     position: absolute;
     width: 1px;
-    height: 4px;
+    height: 6px;
     background-color: #DFDFDF;
     z-index: 101;
-    transform: translate(1px, -2px);
+    transform: translate(1px, -4px);
 }
